<resources>
    <string name="app_name">About Boyd</string>

    <!-- Action bar items -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_credits">Credits</string>
    <string name="action_quit">Quit</string>
    <string name="action_add_quote">Add quote</string>

    <!-- Titles -->
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_credits">Credits</string>
    <string name="title_activity_location">Map</string>
    <string name="title_activity_quote">Quotes</string>
    <string name="title_activity_quote_message">Quote</string>
    <string name="title_activity_add_quote">Add a quote</string>

    <!-- Preferences -->
    <string name="preferences_header_location">Location</string>
    <string name="preferences_show_location">Show location</string>
    <string name="preferences_show_location_summary">Show the location on the main screen</string>

    <!-- Main activity -->
    <string name="welcome_message">Welcome in my awesome app!</string>
    <string name="quotes_button">What people say about me!</string>
    <string name="show_location_button">Show location on map</string>

    <!-- Add Quote activity -->
    <string name="add_quote_message_label">Message:</string>
    <string name="add_quote_author_label">Author:</string>
    <string name="add_quote_add_button_label">Add</string>

    <!-- Credits activity -->
    <string name="credits_programmer_header">Programmer</string>
    <string name="credits_programmer_name">Boyd Bueno de Mesquita</string>
    <string name="credits_designer_header">Designer</string>
    <string name="credits_designer_name">Boyd Bueno de Mesquita</string>
    <string name="credits_community_manager_header">Community Manager</string>
    <string name="credits_community_manager_name">Boyd Bueno de Mesquita</string>
    <string name="credits_sound_designer_header">Sound designer</string>
    <string name="credits_sound_designer_name">Boyd Bueno de Mesquita</string>
    <string name="credits_footnote">[Imagine awesome scrolling effect]</string>

    <!-- About activity -->
    <string name="about_header">An exclusive view of my house!</string>

</resources>
